# nexus-bank-app

./: .gitignore  DEPLOYMENT_GUIDE.md  DOMAIN_SETUP.md  LICENSE  PROJECT_STRUCTURE.md  README.md  comprehensive_test.py  fake-bank.code-workspace  nexus-bank.nginx.conf  pyproject.toml  pyrightconfig.json  run_app.py  setup.py  test_account_numbers.py  test_template_fix.py  verify_fix.py
docs/: 2FA_IMPLEMENTATION.md  2FA_SECURITY_SYSTEM.md  ADMIN_GUIDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT_SUMMARY.md  DYNAMIC_DROPDOWN_FIX.md  ENHANCED_2FA_SECURITY.md  ENHANCED_VERIFICATION_PLAN.md  FINAL_IMPORT_SOLUTION.md  GAP_FILLING_SUMMARY.md  IDE_IMPORT_GUIDE.md  MANUAL_TRANSACTION_GUIDE.md  MODULAR_STRUCTURE.md  MOMENT_FIX_SUMMARY.md  PERSISTENCE_FIX_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  ROBUST_TRANSACTION_SYSTEM.md  TEMPLATE_FIX_SUMMARY.md  TRANSACTION_EXPANSION_SUMMARY.md
scripts/: ide_setup.py  run_bank.bat  run_bank.ps1  update_transactions.py
src/bank/: __init__.py  api_routes.py  app.py  auth.py  config.py  totp_manager.py  transaction_generator.py  transfer_utils.py  user_data.py
tests/: __init__.py  conftest.py  quick_web_test.py  simple_test.py  test_2fa_security.py  test_admin_isolation.py  test_amounts.py  test_app.py  test_dashboard.py  test_direct_template.py  test_expanded_data.py  test_gap_filling.py  test_manual_transactions.py  test_min_payment.py  test_moment_fix.py  test_robust_transactions.py  test_scammer_bait_persistence.py  test_statements.py  test_structure.py  test_with_auth.py  verify_account_mapping.py  verify_moment_fix.py
(+15 files in other folders)
