[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-bank"
version = "1.0.0"
description = "Professional fake bank interface for scam baiting"
authors = [{name = "Bank Development Team"}]
license = {text = "MIT"}
readme = "docs/README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=3.8",
    "black>=21.0",
]

[project.scripts]
fake-bank = "bank.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bank = ["templates/*", "static/*"]
